--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -2,10 +2,191 @@ eltrino:
     diamantedesk:
         branch:
           entity_label:        Branch
-          entity_plural_label: Branchs
+          entity_plural_label: Branches
+          details:             Branch Details
+
+          actions:
+            add:               Add Branch
+            edit:              Edit Branch
+            remove:            Delete Branch
+
+          messages:
+            create:
+              error:           Error occurred when creating the branch. Branch is not created. Enter all required data and try again.
+              success:         Branch successfully created.
+            save:
+              error:           Error occurred when saving the branch. Branch is not saved. Enter all required data and try again
+              success:         Branch successfully saved.
+            delete:
+              query:           Are you sure you want to delete this branch with ALL its tickets? Please note that it cannot be undone!
+              success:         Branch deleted
+            get:
+              error:           Branch loading failed. Branch not found.
+
+          placeholders:
+            form:              Choose branch...
+
         ticket:
           entity_label:        Ticket
           entity_plural_label: Tickets
+          details:             Ticket Details
+          all:                 All Tickets
+
+          actions:
+            add:               Add Ticket
+            edit:              Edit Ticket
+            remove:            Delete Ticket
+            assign:            Assign
+            create:            Create Ticket
+            change_status:     Change status
+
+          messages:
+            create:
+              error:           Error occured while creating ticket
+              success:         Ticket successfully created.
+            save:
+              error:           Error saving ticket
+              success:         Ticket successfully saved.
+            delete:
+              query:           Are you sure you want to delete this ticket?
+              error:           Error occured while deleting ticket
+              success:         Ticket successfully deleted.
+            reassign:
+              error:           Error occured while re-assiging ticket
+              success:         Ticket successfully re-assigned.
+            change_status:
+              error:           Error occured while trying to change ticket status.
+              success:         Status successfully changed
+            get:
+              error:           Ticket loading failed, ticket not found.
+              attachment:
+                error:         Attachment loading failed. Ticket has no such attachment.
+              branch:
+                error:         Branch loading failed, branch not found.
+              reporter:
+                error:         Reporter loading failed, reporter not found.
+              assignee:
+                error:         Assignee validation failed, assignee not found.
+
+
         comment:
           entity_label:        Comment
           entity_plural_label: Comments
+          ticket_status:       Ticket status
+          content:             Content
+
+          actions:
+            edit:              Edit Comment
+            add:               Add Comment
+
+          messages:
+            create:
+              error:           Error saving comment.
+              success:         Comment successfully created.
+            save:
+              error:           Error saving comment.
+              success:         Comment successfully saved.
+            delete:
+              error:
+              success:         Comment successfully deleted.
+              query:           Are you sure you want to delete this comment?
+            get:
+              error:           Comment loading failed, comment not found.
+            get_attach:
+              error:           Attachment loading failed. Comment has no such attachment.
+
+          placeholders:
+            added:             added a comment
+
+        attachment:
+          entity_label:        Attachment
+          entity_plural_label: Attachments
+          file:                File
+          image:               Image
+
+          actions:
+            delete_file:       Delete File
+            add:               Add Attachment
+            download:          Download
+            remove:            Delete
+            attach:            Attach File
+
+          messages:
+            create:
+              error:           Error uploading attachment
+              success:         Attachment(s) successfully uploaded.
+            delete:
+              error:           Unable to remove attachment.
+              success:         Attachment successfully deleted.
+              query:           Are you sure you want to delete this attachment?
+            get:
+              error:           Attachment not found
+            load:
+              error:           Attachment loading failed, attachment not found.
+            upload:
+              error:           Upload directory is not writable, doesn\'t exist or no space left on the disk.
+
+          placeholders:
+            dropzone:          Drop File Here
+
+        file:
+          messages:
+            dump:
+              error:           File name can not be empty string.
+            type:
+              error:           Value should be a File type.
+
+        permissions:
+          messages:
+            granted:
+              error:           Not enough permissions.
+
+        ui:
+          create:              Create
+          ok:                  Ok
+          cancel:              Cancel
+          save:                Save
+          delete:              Delete
+          save_and_close:      Save and close
+          edit:                Edit
+          add:                 Add
+          change:              Change
+
+        common:
+          general:             General
+          description:         Description
+          created:             Created
+          updated:             Updated
+          not_available:       N/A
+          not_defined:         Not defined
+          delete_confirmation: Confirm Deletion
+          filters:             Filters
+
+        forms:
+          name:                Name
+          default_assignee:    Default Assignee
+          logoFile:            Logo
+          tags:                Tags
+
+        attributes:
+          name:                Name
+          subject:             Subject
+          branch:              Branch
+          status:              Status
+          priority:            Priority
+          source:              Source
+          reporter:            Reporter
+          assignee:            Assignee
+
+        commands:
+          create_branch_dir:   Creating Branch logo directory...
+          create_attach_dir:   Creating attachments directory...
+          install_db_schema:   Installing DB schema...
+          update_db_schema:    Updating DB schema...
+          update_navigation:   Updating navigation...
+          process_migrations:  Loading migration data
+          clear_cache:         Clearing cache...
+          assets_install:      Installing assets...
+          updated:             Updated!
+          installed:           Installed!
+          done:                Done
