DIAM-266: Changes in translation strings to reflect the namespace changes

--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -1,5 +1,5 @@
-eltrino:
-    diamantedesk:
+diamante:
+    desk:
         branch:
           entity_label:        Branch
           entity_plural_label: Branches
