DIAM-316 Ticket human readable (unique) key

--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -167,6 +167,7 @@ diamante:
           default_assignee:    Default Assignee
           logoFile:            Logo
           tags:                Tags
+          key:                 Key
 
         attributes:
           name:                Name
@@ -177,3 +178,4 @@ diamante:
           source:              Source
           reporter:            Reporter
           assignee:            Assignee
+          key:                 Key
