Fix DIAM-360: If ticket does not contain comments, should be displayed text: "No comments yet"

--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -94,6 +94,7 @@ diamante:
               error:           Comment loading failed, comment not found.
             get_attach:
               error:           Attachment loading failed. Comment has no such attachment.
+            empty:             There are no comments yet.
 
           placeholders:
             added:             added a comment
