--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -8,6 +8,7 @@ diamante:
           columns:
             logo:              Logo
             branch_name:       Branch Name
+            branch_key:        Branch Key
 
           actions:
             view:              View Branch
