--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -54,6 +54,7 @@ diamante:
             edit:              Edit Ticket
             view:              View Ticket
             remove:            Delete Ticket
+            delete:            Delete Tickets
             assign:            Assign
             create:            Create Ticket
             change_status:     Change status
