--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -26,6 +26,7 @@ diamante:
             delete:
               query:           Are you sure you want to delete this branch with ALL its tickets? Please note that it cannot be undone!
               success:         Branch deleted
+              error:           Current branch is configured as a default for Email Processing and can't be deleted.
             get:
               error:           Branch loading failed. Branch not found.
 
