DIAM-354 display default message if fields is empty

--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -184,6 +184,7 @@ diamante:
           updated:             Updated
           not_available:       N/A
           not_defined:         Not defined
+          no_description:      No description
           delete_confirmation: Confirm Deletion
           filters:             Filters
 
