DIAM-350 fix ticket error after comment author remove

--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -122,6 +122,7 @@ diamante:
 
           placeholders:
             added:             added a comment
+            deleted_user:      Deleted user
 
         attachment:
           entity_label:        Attachment
