DIAM-661: Refactoring and Code inspection clean-up

--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -206,3 +206,6 @@ diamante:
           reporter:            Reporter
           assignee:            Assignee
           key:                 Key
+
+        email:
+          configuration:           Email Configuration
