DIAM-738 Show list of watcher on ticket view (backend)

--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -221,6 +221,7 @@ diamante:
           no_description:      No description
           delete_confirmation: Confirm Deletion
           filters:             Filters
+          watchers:            Watchers
 
         forms:
           name:                Name
