DIAM-569 rename assignee to default assignee

--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -228,7 +228,7 @@ diamante:
           priority:            Priority
           source:              Source
           reporter:            Reporter
-          assignee:            Assignee
+          default_assignee:    Default Assignee
           key:                 Key
 
         email:
