DIAM-569 add  assignee label

--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -229,6 +229,7 @@ diamante:
           source:              Source
           reporter:            Reporter
           default_assignee:    Default Assignee
+          assignee:            Assignee
           key:                 Key
 
         email:
