DIAM-820 Create separate dashboard

--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -249,3 +249,5 @@ diamante:
 
         email:
           configuration:           Email Configuration
+        dashboard:
+          support.label: Support Dashboard
