--- a/src/Diamante/DistributionBundle/Resources/translations/messages.en.yml
+++ b/src/Diamante/DistributionBundle/Resources/translations/messages.en.yml
@@ -15,6 +15,7 @@ process:
             diamante-front-build:           Build Diamante Front
             diamante-front-assets-install:  Install DiamanteDesk Front Assets
             diamante-user-install:          Install DiamanteDesk User
+            diamante-embeddedform-install:  Install DiamanteDesk Embedded Forms
             navigation:                     Init navigation
             js-routing:                     Dump JS routing
             localization:                   Dump localization
