--- a/app/Resources/translations/install.en.yml
+++ b/app/Resources/translations/install.en.yml
@@ -1,4 +1,4 @@
-title:                      Oro Application installation
+title:                      DiamanteDesk Application installation
 
 welcome:
     header:                 Welcome to Oro Installer
