DIAM-858 Admin user should have ability to remove watchers

--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -110,6 +110,8 @@ diamante:
             watch:
               error:           Error occured while trying to add watcher.
               success:         Watcher successfully added.
+            watcher_remove:
+              success:         Watcher successfully removed.
             get:
               error:           Ticket loading failed, ticket not found.
               attachment:
