DIAM-856 - Adding mass actions for tickets and mass delete for branches.

--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -22,7 +22,8 @@ diamante:
             view:              View Branch
             add:               Add Branch
             edit:              Edit Branch
-            remove:            Delete Branch
+            remove_several:    Delete Branch
+            remove_mass:       Delete Branches
 
           messages:
             create:
