DIAM-856 - reverting password in TicketControllerTest, fix in translation.

--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -22,7 +22,7 @@ diamante:
             view:              View Branch
             add:               Add Branch
             edit:              Edit Branch
-            remove_several:    Delete Branch
+            remove:            Delete Branch
             remove_mass:       Delete Branches
 
           messages:
