DIAM-955, DIAM-1101: Linked Diamante User and Diamante Api User entities and added ticket grid for user view

--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -31,3 +31,8 @@ diamante:
         email:          'Please enter an email address'
 
       details:          User Details
+      activity:         User Activity
+
+      ui:
+        yes:            Yes
+        no:             No
