DIAM-1212: Renamed section in User view

--- a/src/Diamante/UserBundle/Resources/translations/messages.en.yml
+++ b/src/Diamante/UserBundle/Resources/translations/messages.en.yml
@@ -9,6 +9,7 @@ diamante:
         active:         Is Active
         id:             Id
         is_deleted:     Is Deleted
+        related_tickets: Tickets
 
       actions:
         create:         Create User
