--- a/src/Diamante/DeskBundle/Resources/translations/messages.en.yml
+++ b/src/Diamante/DeskBundle/Resources/translations/messages.en.yml
@@ -81,7 +81,7 @@ diamante:
             edit:              Edit Ticket
             view:              View Ticket
             remove:            Delete Ticket
-            delete:            Delete Tickets
+            delete:            Delete
             assign:            Assign
             create:            Create Ticket
             change_status:     Change status
