--- a/src/Diamante/UserBundle/Resources/translations/messages.en.yml
+++ b/src/Diamante/UserBundle/Resources/translations/messages.en.yml
@@ -35,9 +35,9 @@ diamante:
           query:        Are you sure you want to delete this user?
           success:      User successfully deleted
         create:
-          success:      Diamante User successfully created
+          success:      Customer successfully created
         update:
-          success:      Diamante User successfully updated
+          success:      Customer successfully updated
         reset_pwd:
           query:        Are you sure you want to reset password for this user?
           success:      User password successfully reset.
