DIAM-1232: Changed column label

--- a/src/Diamante/UserBundle/Resources/translations/messages.en.yml
+++ b/src/Diamante/UserBundle/Resources/translations/messages.en.yml
@@ -10,6 +10,7 @@ diamante:
         id:             Id
         is_deleted:     Is Deleted
         related_tickets: Tickets
+        activated:      Email Activated
 
       actions:
         create:         Create User
