Message files have been updated

--- a/src/Diamante/DistributionBundle/Resources/translations/messages.en.yml
+++ b/src/Diamante/DistributionBundle/Resources/translations/messages.en.yml
@@ -1,4 +1,4 @@
-title:                                      DiamanteDesk Application installation
+title:                                      DiamanteDesk Application Installation
 
 process:
     step:
@@ -25,4 +25,4 @@ process:
             table:
                 diamante:                   DiamanteDesk Requirements
         final:
-            content:                        You're lucky to start using DiamanteDesk right away.<br>If you're looking for some help or need some support please join our community at <a href="https://github.com/eltrino">Github</a> or contact our dedicated support team if you're our Enterprise client.
+            content:                        You're lucky to start using DiamanteDesk right away.<br>If you're looking for some help or need some support, please join our community at <a href="https://github.com/eltrino">Github</a> or contact our dedicated support team if you're our Enterprise client.
