--- a/src/Diamante/UserBundle/Resources/translations/messages.en.yml
+++ b/src/Diamante/UserBundle/Resources/translations/messages.en.yml
@@ -10,7 +10,7 @@ diamante:
         id:             Id
         is_deleted:     Is Deleted
         related_tickets: Tickets
-        activated:      Email Is Confirmed
+        activated:      Email Confirmed
 
       actions:
         create:         Create User
@@ -23,22 +23,22 @@ diamante:
           delete:
             label:      Delete сustomers
             messages:
-              success:  Successfully deleted selected customers
-              fail:     Failed to delete selected customers
+              success:  Selected customers successfully deleted.
+              fail:     Failed to delete selected customers.
           reset_pwd:
-            label:      Reset passwords for customers
+            label:      Reset passwords for customers.
             messages:
-              success:  Successfully reset passwords for %count% selected users
+              success:  Passwords for %count% selected users have been successfully reset.
               fail:     Error occured while resetting passwords.
 
       messages:
         delete:
           query:        Are you sure you want to delete this user?
-          success:      User successfully deleted
+          success:      User successfully deleted.
         create:
-          success:      Customer successfully created
+          success:      Customer successfully created.
         update:
-          success:      Customer successfully updated
+          success:      Customer successfully updated.
         reset_pwd:
           query:        Are you sure you want to reset password for this user?
           success:      User password successfully reset.
@@ -56,8 +56,8 @@ diamante:
         no:             No
 
       notification:
-        created:        New DiamanteDesk account created
+        created:        New DiamanteDesk account created.
         force_reset:    Password reset notification
 
       exception:
-        user_exists:    User with such email already exists
+        user_exists:    User with such email already exists.
