--- a/src/Diamante/DeskBundle/Resources/translations/messages.en.yml
+++ b/src/Diamante/DeskBundle/Resources/translations/messages.en.yml
@@ -98,7 +98,7 @@ diamante:
               error:           Error occurred while creating a ticket.
               success:         Ticket successfully created.
             save:
-              error:           Error occured while saving the ticket.
+              error:           Error occurred while saving the ticket.
               success:         Ticket successfully saved.
             delete:
               query:           Are you sure you want to delete this ticket?
