Fix messages and titles

--- a/src/Diamante/UserBundle/Resources/translations/jsmessages.en.yml
+++ b/src/Diamante/UserBundle/Resources/translations/jsmessages.en.yml
@@ -1,8 +1,8 @@
 'Reset Password Confirmation': 'Reset Password Confirmation'
-'Are you sure you want to reset password for selected users?': 'Are you sure you want to reset password for selected users?'
+'Are you sure you want to reset password for selected customer(s)?': 'Are you sure you want to reset password for selected customer(s)?'
 'Yes, Reset': 'Yes, Reset'
-'Successfully reset password for selected users': 'Successfully reset password for selected users'
-'Error occured while trying to reset passwords.': 'Error occured while trying to reset passwords.'
-'Please, select users to reset passwords for.': 'Please, select users to reset passwords for.'
+'Password(s) for selected customer(s) successfully reset.': 'Password(s) for selected customer(s) successfully reset.'
+'Error occurred while trying to reset password(s).': 'Error occurred while trying to reset password(s).'
+'Please, select customer(s) to reset password.': 'Please, select customer(s) to reset password.'
 'Password Reset Confirmation': 'Password Reset Confirmation'
 'Yes, Reset': 'Yes, Reset'
