DIAM-1323: Modify engine to run single rule. DIAM-1338: Create Console command to run single rule DIAM-1336: AutomationConfigurationProvider updates

--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -63,3 +63,7 @@ diamante:
 
     action:
       update_property: update property
+
+    connector:
+      inclusive: all of these are true
+      exclusive: any of these are true
